Fix OCR on Render deployment

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -288,7 +288,7 @@
         // Configuration - UPDATE THIS WITH YOUR RENDER URL
         const API_URL = window.location.hostname === 'localhost' 
             ? 'http://localhost:5000' 
-            : 'https://udder-hygiene-ocr.onrender.com';  // ← CHANGE THIS TO YOUR ACTUAL RENDER URL
+            : 'https://udder-hygiene-oc.onrender.com';  // ← CHANGE THIS TO YOUR ACTUAL RENDER URL
 
         let extractedData = [];
         let chart = null;
